--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ __pycache__
 Depandances/Imgs
 Depandances/Trash
 Depandances/Config
+Depandances/__pycache__
 Depandances/outils/__pycache__
 Depandances/outils/Dependances/__pycache__
