--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #test.py
 #essais.py
 __pycache__
-Depandances/Imgs
+#Depandances/Imgs
 #Depandances/Trash
 #Depandances/Config
 Depandances/__pycache__
