--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .env
-#test.py
-#essais.py
+test.py
+essais.py
 __pycache__
-#Depandances/Imgs
-#Depandances/Trash
-#Depandances/Config
+Depandances/Trash
 Depandances/__pycache__
 Depandances/Outils/__pycache__
 Depandances/Outils/Jeux/__pycache__
 Depandances/Outils/Jeux/outils/__pycache__
 Depandances/Outils/Dependances/__pycache__
+
+#Depandances/Imgs
+#Depandances/Config
