Update .gitignore for the autogeneratedd files in Config/ and Imgs/

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 test.py
 essais.py
 __pycache__
+Depandances/Imgs
 Depandances/Trash
+Depandances/Config
 Depandances/__pycache__
 Depandances/Outils/__pycache__
 Depandances/Outils/Jeux/__pycache__
 Depandances/Outils/Jeux/outils/__pycache__
 Depandances/Outils/Dependances/__pycache__
-
-#Depandances/Imgs
-#Depandances/Config
