--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,5 @@ aut1 = ''   ### Nom auteur·ice 1 ###
 aut2 = ''   ### Nom auteur·ice 2 ###
 nomJeu = '' ### Nom du jeu-vidéo ###
 ####################################
-## Copie-colle le texte ci-dessus ##
-## sur un fichier nommé ".env" et ##
-## remplis les champs ci-présents ##
+## Vide signifie celui par défaut ##
 ####################################
